--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-router": "^4.2.2",
     "vuetify": "^3.2.1"
   },
   "devDependencies": {
