- made progress on project and silo selection

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-cookies": "^1.8.3",
     "vue-router": "^4.2.2",
     "vuedraggable": "^4.1.0",
     "vuetify": "^3.2.1",
