--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "highlight.js": "^11.8.0",
     "vue": "^3.2.13",
     "vue-cookies": "^1.8.3",
+    "vue-diff": "^1.2.4",
     "vue-router": "^4.2.2",
     "vuedraggable": "^4.1.0",
     "vuetify": "^3.3.3",
