--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
     "highlight.js": "^11.8.0",
     "vue": "^3.2.13",
     "vue-cookies": "^1.8.3",
