--- a/package.json
+++ b/package.json
@@ -13,16 +13,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@codemirror/lang-json": "6.0.1",
+    "@codemirror/lang-markdown": "6.2.1",
+    "@codemirror/lang-python": "6.1.3",
+    "@codemirror/lang-xml": "6.0.2",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "6.20.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@uiw/codemirror-theme-github": "^4.21.18",
+    "audit": "^0.0.6",
     "axios": "^1.4.0",
+    "codemirror": "^6.0.1",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "fix": "^0.0.6",
     "highlight.js": "^11.8.0",
     "vue": "^3.2.13",
+    "vue-codemirror": "^6.1.1",
+        "vue-codemirror6": "^1.1.27",
     "vue-cookies": "^1.8.3",
     "vue-diff": "^1.2.4",
     "vue-router": "^4.2.2",
@@ -41,7 +53,8 @@
     "eslint-plugin-vue": "^8.0.3",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
-    "vue-pug-plugin": "^2.0.3"
+    "vue-pug-plugin": "^2.0.3",
+        "sass-loader": "^13.3.2"
   },
   "eslintConfig": {
     "root": true,
